backend: add new validations to cars resource
