# backend/src/cars/cars.controller.ts
@@ -10,56 +10,56 @@ import {
 } from '@nestjs/common';
 import { ApiOperation, ApiParam, ApiResponse, ApiTags } from '@nestjs/swagger';
 import { CarsService } from './cars.service';
-import { CreateCarDto } from './dto';
-import { Car } from './dto/car.dto';
+import { CreateCarDto, UpdateCarDto } from './dto';
+import { Car } from './entities';
 
-@ApiTags('cars') // Añadimos un tag para agrupar todas las rutas relacionadas con coches
+@ApiTags('cars') // Tag to group all routes related to cars
 @Controller('cars')
 export class CarsController {
   constructor(private readonly carsService: CarsService) {}
 
   @Get()
-  @ApiOperation({ summary: 'Obtener todos los coches' })
-  @ApiResponse({ status: 200, description: 'Lista de coches', type: [Car] })
-  getAllCars() {
+  @ApiOperation({ summary: 'Get all cars' })
+  @ApiResponse({ status: 200, description: 'List of cars', type: [Car] })
+  getAllCars(): Car[] {
     return this.carsService.findAll();
   }
 
   @Get(':id')
-  @ApiOperation({ summary: 'Obtener un coche por ID' })
-  @ApiParam({ name: 'id', type: String, description: 'ID del coche' })
-  @ApiResponse({ status: 200, description: 'Coche encontrado', type: Car })
-  @ApiResponse({ status: 404, description: 'Coche no encontrado' })
-  getCarById(@Param('id', ParseUUIDPipe) id: string) {
+  @ApiOperation({ summary: 'Get a car by ID' })
+  @ApiParam({ name: 'id', type: String, description: 'Car ID' })
+  @ApiResponse({ status: 200, description: 'Car found', type: Car })
+  @ApiResponse({ status: 404, description: 'Car not found' })
+  getCarById(@Param('id', ParseUUIDPipe) id: string): Car {
     return this.carsService.findOne(id);
   }
 
   @Post()
-  @ApiOperation({ summary: 'Crear un nuevo coche' })
-  @ApiResponse({ status: 201, description: 'Coche creado', type: Car })
-  @ApiResponse({ status: 400, description: 'Error al crear el coche' })
-  createCar(@Body() createCarDto: CreateCarDto) {
+  @ApiOperation({ summary: 'Create a new car' })
+  @ApiResponse({ status: 201, description: 'Car created', type: Car })
+  @ApiResponse({ status: 400, description: 'Error creating car' })
+  createCar(@Body() createCarDto: CreateCarDto): Car {
     return this.carsService.create(createCarDto);
   }
 
   @Patch(':id')
-  @ApiOperation({ summary: 'Actualizar un coche' })
-  @ApiParam({ name: 'id', type: String, description: 'ID del coche' })
-  @ApiResponse({ status: 200, description: 'Coche actualizado', type: Car })
-  @ApiResponse({ status: 404, description: 'Coche no encontrado' })
+  @ApiOperation({ summary: 'Update a car' })
+  @ApiParam({ name: 'id', type: String, description: 'Car ID' })
+  @ApiResponse({ status: 200, description: 'Car updated', type: Car })
+  @ApiResponse({ status: 404, description: 'Car not found' })
   updateCar(
-    @Body() updateCarDto: Partial<Car>,
+    @Body() updateCarDto: UpdateCarDto,
     @Param('id', ParseUUIDPipe) id: string,
-  ) {
+  ): Car {
     return this.carsService.update(id, updateCarDto);
   }
 
   @Delete(':id')
-  @ApiOperation({ summary: 'Eliminar un coche' })
-  @ApiParam({ name: 'id', type: String, description: 'ID del coche' })
-  @ApiResponse({ status: 200, description: 'Coche eliminado' })
-  @ApiResponse({ status: 404, description: 'Coche no encontrado' })
-  deleteCar(@Param('id', ParseUUIDPipe) id: string) {
+  @ApiOperation({ summary: 'Delete a car' })
+  @ApiParam({ name: 'id', type: String, description: 'Car ID' })
+  @ApiResponse({ status: 200, description: 'Car deleted' })
+  @ApiResponse({ status: 404, description: 'Car not found' })
+  deleteCar(@Param('id', ParseUUIDPipe) id: string): Car {
     return this.carsService.remove(id);
   }
 }
